src/assets/styles/style.scss
@import 'theme';
@import 'mixins';

html {
  min-height: 100vh;
  height: 100%;
}

body {
  color: $app-color;
}

.popover {
  z-index: 99;
}

#app {
  min-height: 100vh;
  color: $app-color;
  background: $app-bg;

  .align-center {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .flex-columns {
    flex-direction: column;
  }

  .spinner {
    animation-name: spin;
    animation-duration: 1000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
  }

  @keyframes spin {
    from {
      transform: rotate(0deg);
    }

    to {
      transform: rotate(360deg);
    }
  }

  @keyframes typewriter {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  // .container {
    a {
      color: $primary-color;
    }

    .card {
      background-color: $card-bg-color;
      border-color: $card-border-color;

      .card-body {
        .btn-hint {
          color: $btn-hint-text-color;
          font-weight: $btn-hint-font-weight;

          // background-color: $btn-hint-color;
          border-color: $btn-hint-color;
          font-size: $btn-hint-font-size;

          // font-family: $btn-hint-font-family;
          // transform: rotate(30deg);

          &:focus {
            box-shadow: 0 0 0 0.25rem $btn-hint-shadow-color;
          }
        }
      }
    }

    button.btn-primary {
      color: $btn-primary-text-color;
      background-color: $btn-primary-color;
      border-color: $btn-primary-color;

      &:focus {
        box-shadow: 0 0 0 0.25rem $btn-primary-shadow-color;
      }
    }

    button.btn-secondary {
      color: $btn-secondary-text-color;
      background-color: $btn-secondary-color;
      border-color: $btn-secondary-color;

      &:focus {
        box-shadow: 0 0 0 0.25rem $btn-secondary-shadow-color;
      }
    }

    button.btn-approve {
      color: $btn-approve-text-color;
      background-color: $btn-approve-color;
      border-color: $btn-approve-color;

      &:focus {
        box-shadow: 0 0 0 0.25rem $btn-approve-shadow-color;
      }
    }

    .btn-upload {
      color: $btn-upload-text-color;
      background-color: $btn-upload-color;
    }

    button.btn-found {
      color: $btn-found-text-color;
      background-color: $btn-found-color;
      border-color: $btn-found-color;

      &:focus {
        box-shadow: 0 0 0 0.25rem $btn-found-shadow-color;
      }
    }

    button.btn-mystery {
      color: $btn-mystery-text-color;
      background-color: $btn-mystery-color;
      border-color: $btn-mystery-color;

      &:focus {
        box-shadow: 0 0 0 0.25rem $btn-mystery-shadow-color;
      }
    }

    button.btn-post {
      color: $btn-post-text-color;
      background-color: $btn-post-color;
      border-color: $btn-post-color;

      &:focus {
        box-shadow: 0 0 0 0.25rem $btn-post-shadow-color;
      }
    }

    .tag-number {
      color: $tag-number-color;
      background-color: $tag-number-bg-color;
      font-size: $tag-number-font-size;
      font-weight: $tag-number-font-weight;
      font-family: $tag-number-font-family;
      filter: saturate(0.75);
    }

    .player-list {
      display: flex;
      flex-flow: row;
      flex-wrap: wrap;
      justify-content: space-evenly;
      margin-bottom: 4em;
    }

    .player-name {
      color: $tag-text-color;
      font-family: $default-font-family;
      font-weight: $tag-player-font-weight;

      // font-size: $tag-player-font-size;
      line-height: $tag-player-line-height;
      text-transform: uppercase;
    }

    .tag-date {
      color: $tag-text-color;
      font-family: $tag-date-font-family;
      font-weight: $tag-date-font-weight;
      font-size: $tag-date-font-size;
      line-height: $tag-date-line-height;
    }

    .description {
      font-size: $tag-description-font-size;
      font-weight: $tag-description-font-weight;
      font-family: $tag-description-font-family;
      background-color: $tag-number-bg-color;
      filter: saturate(0.75);
    }

    .player-wrapper {
      .player-name {
        color: $player-name-text-color;
      }

      .tag-count {
        color: $tag-count-text-color;
      }
    }

    .form-control:focus{
      box-shadow: none;
    }

    .form-control:-webkit-autofill{
      transition: background-color 5000s ease-in-out 0s;
      box-shadow: inset 0 0 20px 20px white;
    }
    
    .pagination {
      padding-bottom: 1em;

      .page-item {
        .page-link {
          font-size: 0.8rem;
          color: $primary-color;
          background-color: transparent;
          @media (width >= 575px){
            font-size: 1rem;
          }
        }

        &.active {
          .page-link {
            color: $btn-upload-text-color;
            background-color: $primary-color;
            border-color: $primary-color;
          }
        }
        
      }
    }

    .swiper {
      padding-bottom: 20px;
      
      .swiper-button-prev {
        color: $btn-swiper-color;
        inset: 25% auto 0 0rem !important;

        // z-index: 99;

        &::after {
          font-size: $btn-swiper-font-size;

          // font-weight: bolder;
        }
      }

      .swiper-button-next {
        color: $btn-swiper-color;
        inset: 25% 0rem 0 auto !important;

        // z-index: 99;

        &::after {
          font-size: $btn-swiper-font-size;

          // font-weight: bolder;
        }
      }

      // .swiper-pagination {
      //   .swiper-pagination-bullet {
      //     width: 30px;
      //     height: 6px;
      //     background-color: transparent;
      //     border-radius: 0;

      //     &.swiper-pagination-bullet-active {
      //       background-color: $btn-swiper-color;
      //     }
      //   }
      // }

      .swiper-slide {
        height: unset;
        padding: 0 2.5rem;
        &.active {
          flex-basis: max-content;
          align-self: stretch;
        }

        p {
          font-family: $how-font-family;
          font-size: $how-font-size;
        }
      }
    }

    .form-select {
      width: 10rem;
    }

    .header-logo {
      .game-title {
        font-family: $title-font-family;
        font-size: $title-font-size;
        font-weight: $title-font-weight;
      }
    }

    .tag-player {
      color: $tag-text-color;
      font-family: $tag-player-font-family;
      font-weight: $tag-player-font-weight;
      font-size: $tag-player-font-size;

      // text-shadow: 2px 2px #292828e6;
      // filter: invert(1);
    }

    .vld-overlay .vld-background {
      background: transparent;
    }

    .queue-title {
      font-family: $title-font-family;
      font-size: $title-font-size;
      font-weight: $title-font-weight;
    }

    .body-text {
      font-family: $default-font-family;
      font-weight: 100;
      font-size: 1.5rem;
      transform: unset;
    }

    .user-agree {
      font-size: 0.75rem;
      font-style: italic;
    }

    .just-center {
      justify-content: center;
      align-items: center;
    }

  .add-found-tag, .add-mystery-tag {
    max-width: 600px;
    margin: auto;

    .biketag-button {
      width: 100%;
    }

    .biketag-button .button__children {
      padding: 0;
    }

    .queue-text {
      font-size: 1.2rem!important;
      margin: 1rem;
      text-align: justify;
    }

    .title-container {
      position: relative;
      padding: 0;
      z-index: 4;
      margin-top: -25px;

      .biketag {
        &__button {
          height: 5rem;
          position: relative;
          padding: 0;
          bottom: -25px;

          @media (min-width: $breakpoint-mobile-md) {
            height: 6rem;
          }
        }

        &__text {
          .queue-title {
            font-size: 1.2rem!important;
            margin: 0 1rem;
          }
        }
      }
    }

    .click-me {
      cursor: pointer;
    }

    .icn {
      padding: 10px 16px 10px 10px;

      &--top {
        bottom: -20px;
        right: 0;
      }
    }

    .preview-container {
      background-position: center;
      background-size: cover;
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;

      .biketag__button {
        z-index: 3;
        position: absolute;
        transition-property: bottom, right;
        transition-duration: 1s;
      }

      .prev-img{
        width: 100%;
        height: 100%;
        z-index: 0;
        position: absolute;
        object-fit: contain;

        @media (width >= 400px){
          width: 98%;
        }
      }

      .img-bck {
        z-index: 2;
        width: 100%;

        // @media (min-width: 400px){
        //   width: 100%;
        // }
      }
    }

    .sub-container {
      .biketag {
        &__button {
          width: 15rem;
          height: 6rem;
        }
      }
    }
  }
}

// }

